force-app/main/default/objects/Favorite_Club_Member__c/Favorite_Club_Member__c.object-meta.xml
<CustomObject>
    <label>Club Favorite Member</label>
    <nameField>
        <label>Favorite Club Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Favorite Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>