force-app/main/default/objects/Favorite_Club_Member__c/fields/clubMemberId__c.field-meta.xml
<CustomField>
    <fullName>clubMemberId__c</fullName>
    <description>Client’s MemberId for a Club</description>
    <label>Club Member</label>
    <referenceTo>Club_MemberShip__c</referenceTo>
    <relationshipLabel>Favorites Club Members</relationshipLabel>
    <relationshipName>Favorite_Club_Member</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>