force-app/main/default/objects/Favorite_Club_Member__c/fields/favoriteClubMemberId__c.field-meta.xml
<CustomField>
    <fullName>favoriteClubMemberId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Club Member favorite Member</description>
    <label>Favorite Club Member</label>
    <referenceTo>Club_MemberShip__c</referenceTo>
    <relationshipLabel>Favorite by a Member</relationshipLabel>
    <relationshipName>Followers</relationshipName>
    <type>Lookup</type>
</CustomField>