force-app/main/default/objects/Favorite_Club_Member__c/fields/isFavoriteIsClubEligible__c.field-meta.xml
<CustomField>
    <fullName>isFavoriteIsClubEligible__c</fullName>
    <formula>favoriteClubMemberId__r.isClubEligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Favorite Club Member - Club Eligibility</label>
    <type>Checkbox</type>
</CustomField>