force-app/main/default/objects/Favorite_Club_Member__c/fields/isFavoriteIsMember__c.field-meta.xml
<CustomField>
    <fullName>isFavoriteIsMember__c</fullName>
    <formula>favoriteClubMemberId__r.isMember__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Favorite Member - Is Member</label>
    <type>Checkbox</type>
</CustomField>