force-app/main/default/objects/Favorite_Club_Member__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>[clubMemberId__c.dreamId__c]-[favoriteClubMemberId__c.dreamId__c]</description>
    <label>UniqueKey</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>