force-app/main/default/objects/Favorite_Club_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>clubMemberId__c</columns>
    <columns>favoriteClubMemberId__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>